@@ -117,9 +117,11 @@ Hendrik Jaeger (henk)
 Henrik Holst (hholst80)
 hofheinz
 hutou
+iboggs
 infinitewhileloop
 Ink (inknoir)
 iSeeU816
+itshog
 IvanBarsukov
 j-xella
 J. Reis
